--- a/css/tattoos-gallery.css
+++ b/css/tattoos-gallery.css
@@ -394,7 +394,7 @@
     
     .hero .hero-content-all {
         font-size: 2rem;
-        margin-top: -50px;
+        margin-top: 50px;
         line-height: 1.1;
     }
     
